Fixed button labels on smaller screens.

--- a/docs/assets/css/theme-custom.css
+++ b/docs/assets/css/theme-custom.css
@@ -21,7 +21,8 @@
 .markdown-section .button {
   cursor: pointer;
   color: white;
-  height: 38px;
+  height: auto;
+  display: inline-block;
   padding: 8px;
   background-color: var(--link-color);
   text-decoration: none;
